@@ -3,6 +3,9 @@ Revision history for perl distribution Convos
 4.41 Not Released
  - Fix keepalive PING message
  - Fix "Unknown operationId" errors in Operation.js
+ - Removed last_active and last_read from Dialog
+ - Renamed "read" operationIds in OpenAPI spec
+ - Mark notifications as read when leaving the "Notifications" page
 
 4.40 2020-09-22T10:06:00+0900
  - Fix line numbers in embedded paste
